feat(groups): changed request type of info endpoint to GET
